--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
     <title>Nav bar</title>
 </head>
 <body>
-   <nav class="navbar">
-       <a href="#" class="toggle-button">
-           <nav class="bar"></nav>
-           <nav class="bar"></nav>
-           <nav class="bar"></nav>
-       </a>
-       <div class="brand-name">Brand Name</div>
-       <div class="navbar-link">
-           <ul>
-               <li><a href="#">Home</a></li>
-               <li><a href="#">About</a></li>
-               <li><a href="#">Contact</a></li>
-           </ul>
-       </div>
-   </nav>
+    <!-- navbar -->
+    <nav class="navbar">
+        <a href="#" class="toggle-button">
+            <nav class="bar"></nav>
+            <nav class="bar"></nav>
+            <nav class="bar"></nav>
+        </a>
+        <div class="brand-name">Brand Name</div>
+        <div class="navbar-link">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <!-- navbar end -->
 
    <script src="./script.js"></script>
 </body>
